# live-bootcamp-project

./: README.md  compose.yml
app-service/: Cargo.toml  Dockerfile  bacon.toml
auth-service/: Cargo.toml  Dockerfile  api_schema.yml  bacon.toml
auth-service/src/: lib.rs  main.rs
auth-service/src/domain/: data_stores.rs  error.rs  mod.rs  user.rs
auth-service/src/routes/: login.rs  logout.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: hashmap_user_store.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  routes.rs  signup.rs  verify_2fa.rs  verify_token.rs
