[package]
name = "app-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8"
axum-extra = { version = "0.12", features = ["cookie"] }
tower-http = { version = "0.6", features = ["fs"] }
tokio = { version = "1.49", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
askama = "0.15"
