[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8"
reqwest = { version = "0.13.1", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }

[dev-dependencies]
reqwest = { version = "0.13.1", default-features = false, features = ["json"] }
